# autodev-coding-agent

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
autodev/: __init__.py  adaptive_gate.py  autonomous_incident_export.py  autonomous_incident_send.py  autonomous_mode.py  autonomous_ticket_draft.py  browser_automation.py  cli_progress.py  config.py  context_engine.py  env_manager.py  exec_kernel.py  experiment_log.py  failure_analyzer.py  gui_api.py  gui_mvp_dto.py  gui_mvp_server.py  gui_process_manager.py  json_utils.py  llm_client.py  loop.py  loop_checkpoint.py  loop_payloads.py  loop_tasks.py  loop_utils.py  loop_validators.py  main.py  multi_strategy.py  patch_utils.py  perf_baseline.py  plugin.py  prd_parser.py  progress.py  quality_score.py  report.py  roles.py  run_analyzer.py  run_trace.py  schemas.py  task_scheduler.py  (+7 more)
docs/: AUTONOMOUS_AUTORESEARCH_BLOCKER_POLICY.md  AUTONOMOUS_COMMERCIAL_PLAN.md  AUTONOMOUS_FAILURE_PLAYBOOK.md  AUTONOMOUS_MODE.md  AUTONOMOUS_RETRY_STRATEGY_V2.md  AUTONOMOUS_STAGE_BOUNDARY_CONTRACT.md  AUTONOMOUS_V2_BACKLOG.md  AUTONOMOUS_V2_WAVE_CLOSURE.md  AUTONOMOUS_V2_WAVE_PLAN.md  AUTONOMOUS_V3_BACKLOG.md  (+29 more)
templates/python_library/: .semgrep.yml  README.md  pyproject.toml  requirements-dev.txt
templates/python_library/.github/workflows/: ci.yml
templates/python_library/contracts/: library_contract.json
templates/python_library/scripts/: generate_sbom.py
templates/python_library/tests/: test_core.py  test_library_snapshot.py
(+111 files in other folders)
