[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodev-agent"
version = "0.1.0"
description = "Enterprise-grade PRD-to-code orchestration with local validation loops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx==0.27.0",
  "pyyaml==6.0.2",
  "jsonschema==4.23.0",
  "rich==13.7.1",
]

[project.scripts]
autodev = "autodev.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodev*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
