[project]
name = "autodev-library-template"
version = "0.1.0"
description = "Reusable Python library template"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pip-audit",
  "bandit",
  "jsonschema",
  "semgrep",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S", "ASYNC", "PT", "RUF"]
extend-select = ["PLC", "PLE", "PLR"]
ignore = ["S104"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
